07 Viz, 08 DataFrame Creation, 09 Time Series Apple

--- a/pandas_exercises-master/08_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
+++ b/pandas_exercises-master/08_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
@@ -22,12 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,11 +41,32 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'evolution': ['Ivy', 'Charmeleon', 'Wart', 'Meta'],\n",
+       " 'hp': [45, 39, 44, 45],\n",
+       " 'name': ['Bulb', 'Charmander', 'Squirtle', 'Caterpie'],\n",
+       " 'pokedex': ['yes', 'no', 'yes', 'no'],\n",
+       " 'type': ['grass', 'fire', 'water', 'bug']}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poke = {'evolution': ['Ivy', 'Charmeleon', 'Wart', 'Meta'],\n",
+    "        'hp': [45, 39, 44, 45],\n",
+    "        'name': ['Bulb', 'Charmander', 'Squirtle', 'Caterpie'],\n",
+    "        'pokedex': ['yes', 'no', 'yes', 'no'],\n",
+    "        'type': ['grass', 'fire', 'water', 'bug']}\n",
+    "\n",
+    "poke"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,14 +78,25 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -77,9 +111,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Ivysaur</td>\n",
+       "      <td>Ivy</td>\n",
        "      <td>45</td>\n",
-       "      <td>Bulbasaur</td>\n",
+       "      <td>Bulb</td>\n",
        "      <td>yes</td>\n",
        "      <td>grass</td>\n",
        "    </tr>\n",
@@ -93,7 +127,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Wartortle</td>\n",
+       "      <td>Wart</td>\n",
        "      <td>44</td>\n",
        "      <td>Squirtle</td>\n",
        "      <td>yes</td>\n",
@@ -101,7 +135,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Metapod</td>\n",
+       "      <td>Meta</td>\n",
        "      <td>45</td>\n",
        "      <td>Caterpie</td>\n",
        "      <td>no</td>\n",
@@ -113,10 +147,10 @@
       ],
       "text/plain": [
        "    evolution  hp        name pokedex   type\n",
-       "0     Ivysaur  45   Bulbasaur     yes  grass\n",
+       "0         Ivy  45        Bulb     yes  grass\n",
        "1  Charmeleon  39  Charmander      no   fire\n",
-       "2   Wartortle  44    Squirtle     yes  water\n",
-       "3     Metapod  45    Caterpie      no    bug"
+       "2        Wart  44    Squirtle     yes  water\n",
+       "3        Meta  45    Caterpie      no    bug"
       ]
      },
      "execution_count": 5,
@@ -124,7 +158,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "poke_df = pd.DataFrame(data=poke)\n",
+    "poke_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,12 +172,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>type</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>Ivy</td>\n",
+       "      <td>45</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>Bulb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>no</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>39</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>Charmander</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>Wart</td>\n",
+       "      <td>44</td>\n",
+       "      <td>water</td>\n",
+       "      <td>Squirtle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>no</td>\n",
+       "      <td>Meta</td>\n",
+       "      <td>45</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>Caterpie</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  pokedex   evolution  hp   type        name\n",
+       "0     yes         Ivy  45  grass        Bulb\n",
+       "1      no  Charmeleon  39   fire  Charmander\n",
+       "2     yes        Wart  44  water    Squirtle\n",
+       "3      no        Meta  45    bug    Caterpie"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poke_df = pd.DataFrame(data=poke, columns=['name', 'type', 'hp', 'evolution', 'pokedex'])\n",
+    "\n",
+    "\n",
+    "# Also this\n",
+    "\n",
+    "poke_df = poke_df[['pokedex', 'evolution', 'hp', 'type', 'name']]\n",
+    "poke_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,12 +272,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulb</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ivy</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>shrub</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>no</td>\n",
+       "      <td>mountain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>water</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Wart</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>lake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Meta</td>\n",
+       "      <td>no</td>\n",
+       "      <td>forest</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   type  hp   evolution pokedex     place\n",
+       "0        Bulb  grass  45         Ivy     yes     shrub\n",
+       "1  Charmander   fire  39  Charmeleon      no  mountain\n",
+       "2    Squirtle  water  44        Wart     yes      lake\n",
+       "3    Caterpie    bug  45        Meta      no    forest"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "place = ['shrub', 'mountain', 'lake', 'forest']\n",
+    "\n",
+    "poke_df['place'] = place\n",
+    "\n",
+    "poke_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,12 +375,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name         object\n",
+       "type         object\n",
+       "hp            int64\n",
+       "evolution    object\n",
+       "pokedex      object\n",
+       "place        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poke_df.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,23 +418,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
