--- a/pandas_exercises-master/10_Deleting/Wine/Exercises.ipynb
+++ b/pandas_exercises-master/10_Deleting/Wine/Exercises.ipynb
@@ -21,12 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,12 +45,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>14.23</th>\n",
+       "      <th>1.71</th>\n",
+       "      <th>2.43</th>\n",
+       "      <th>15.6</th>\n",
+       "      <th>127</th>\n",
+       "      <th>2.8</th>\n",
+       "      <th>3.06</th>\n",
+       "      <th>.28</th>\n",
+       "      <th>2.29</th>\n",
+       "      <th>5.64</th>\n",
+       "      <th>1.04</th>\n",
+       "      <th>3.92</th>\n",
+       "      <th>1065</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13.20</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>2.14</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>1050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13.16</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>5.68</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>1185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>14.37</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.85</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>7.80</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>1480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13.24</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>118</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>14.20</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>1450</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   1  14.23  1.71  2.43  15.6  127   2.8  3.06   .28  2.29  5.64  1.04  3.92  \\\n",
+       "0  1  13.20  1.78  2.14  11.2  100  2.65  2.76  0.26  1.28  4.38  1.05  3.40   \n",
+       "1  1  13.16  2.36  2.67  18.6  101  2.80  3.24  0.30  2.81  5.68  1.03  3.17   \n",
+       "2  1  14.37  1.95  2.50  16.8  113  3.85  3.49  0.24  2.18  7.80  0.86  3.45   \n",
+       "3  1  13.24  2.59  2.87  21.0  118  2.80  2.69  0.39  1.82  4.32  1.04  2.93   \n",
+       "4  1  14.20  1.76  2.45  15.2  112  3.27  3.39  0.34  1.97  6.75  1.05  2.85   \n",
+       "\n",
+       "   1065  \n",
+       "0  1050  \n",
+       "1  1185  \n",
+       "2  1480  \n",
+       "3   735  \n",
+       "4  1450  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = 'https://archive.ics.uci.edu/ml/machine-learning-databases/wine/wine.data'\n",
+    "\n",
+    "wine_df = pd.read_csv(data)\n",
+    "\n",
+    "wine_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,12 +213,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# del wine_df.iloc[:, [0, 3, 6, 8, 10, 12, 13]]\n",
+    "\n",
+    "# wine_df[:, [0, 3, 6, 8, 10, 12, 13]]\n",
+    "\n",
+    "# Should be using the drop method instead of del\n",
+    "\n",
+    "wine_df.drop(wine_df.columns[[0, 3, 6, 8, 10, 12, 13]], axis=1, inplace=True)\n",
+    "\n",
+    "# wine_df.columns[[0, 3, 6, 8, 10, 12, 13]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>14.23</th>\n",
+       "      <th>1.71</th>\n",
+       "      <th>15.6</th>\n",
+       "      <th>127</th>\n",
+       "      <th>3.06</th>\n",
+       "      <th>2.29</th>\n",
+       "      <th>1.04</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13.20</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.16</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>101</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14.37</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.24</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>118</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.20</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   14.23  1.71  15.6  127  3.06  2.29  1.04\n",
+       "0  13.20  1.78  11.2  100  2.76  1.28  1.05\n",
+       "1  13.16  2.36  18.6  101  3.24  2.81  1.03\n",
+       "2  14.37  1.95  16.8  113  3.49  2.18  0.86\n",
+       "3  13.24  2.59  21.0  118  2.69  1.82  1.04\n",
+       "4  14.20  1.76  15.2  112  3.39  1.97  1.05"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(wine_df.columns)\n",
+    "\n",
+    "wine_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,12 +356,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alc</th>\n",
+       "      <th>malic</th>\n",
+       "      <th>alcalinity</th>\n",
+       "      <th>magne</th>\n",
+       "      <th>flava</th>\n",
+       "      <th>proanth</th>\n",
+       "      <th>hue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13.20</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.16</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>101</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14.37</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.24</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>118</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.20</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     alc  malic  alcalinity  magne  flava  proanth   hue\n",
+       "0  13.20   1.78        11.2    100   2.76     1.28  1.05\n",
+       "1  13.16   2.36        18.6    101   3.24     2.81  1.03\n",
+       "2  14.37   1.95        16.8    113   3.49     2.18  0.86\n",
+       "3  13.24   2.59        21.0    118   2.69     1.82  1.04\n",
+       "4  14.20   1.76        15.2    112   3.39     1.97  1.05"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_df.columns = ['alc', 'malic', 'alcalinity', 'magne', 'flava', 'proanth', 'hue']\n",
+    "\n",
+    "wine_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,12 +473,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wine_df.loc[:2, 'alc'] = np.nan"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,12 +489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wine_df.loc[2:3, 'magne'] = np.nan"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,12 +505,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alc</th>\n",
+       "      <th>malic</th>\n",
+       "      <th>alcalinity</th>\n",
+       "      <th>magne</th>\n",
+       "      <th>flava</th>\n",
+       "      <th>proanth</th>\n",
+       "      <th>hue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.00</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.00</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.00</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.24</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.20</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     alc  malic  alcalinity  magne  flava  proanth   hue\n",
+       "0  10.00   1.78        11.2  100.0   2.76     1.28  1.05\n",
+       "1  10.00   2.36        18.6  101.0   3.24     2.81  1.03\n",
+       "2  10.00   1.95        16.8  100.0   3.49     2.18  0.86\n",
+       "3  13.24   2.59        21.0  100.0   2.69     1.82  1.04\n",
+       "4  14.20   1.76        15.2  112.0   3.39     1.97  1.05"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_df.alc.fillna(10, inplace=True)\n",
+    "wine_df.magne.fillna(100, inplace=True)\n",
+    "\n",
+    "wine_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +623,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "alc           0\n",
+       "malic         0\n",
+       "alcalinity    0\n",
+       "magne         0\n",
+       "flava         0\n",
+       "proanth       0\n",
+       "hue           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_df.isnull().sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,12 +657,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 6, 2, 8, 4, 4, 4, 9, 0, 6])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(0, high=10, size=10)\n",
+    "\n",
+    "arr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,9 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -198,9 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -214,9 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -230,9 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -246,9 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -271,23 +766,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
